assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300;400&display=swap');

/* Main View Styling */

html {
    min-height: 100%;
    position: relative;
}

body {
    font-family: 'oswald', sans serif;
    background-color: gray;
    min-height: 100vh;


}


/* Header and Footer*/
header {
    text-align: center;
    margin: auto;

}

footer {
    position: absolute;
    width: 100%;
    min-height: 25px;
    bottom: 0;
    left: 0;
    box-sizing: border-box;
    padding-top: 1px;
    text-align: center;
    color: gray;
    background-color: black;
}

footer>p {
    font-size: 20px
}

/* Game area*/
.game-area {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1%;
    text-align: center;
    margin-bottom: 50px;
}

.selector {
    display: inline-block;
    margin: 15px;
    width: 150px;
    height: 30px;
}


.player {
    background-color: green;
    float: left;
    width: 30%;
    height: 290px;

}

.computer {
    background-color: red;
    float: right;
    width: 30%;
    height: 290px;
}



#messages {
    height: 0px;
    padding-top: 60px;
}




#player-image {
    width: 50%;
    height: 55%;
    position: relative;
}

#computer-image {
    width: 50%;
    height: 55%;
    position: relative;
}

.round {
    text-align: left;
    padding-top: 0.5px;
}

#player-round {
    padding-top: 0.3px;
}

#computer-round {
    padding-top: 0.3px;
}

/* Media query for smaller screnes*/

@media only screen and (max-width: 600px) {
    .game-area {
        width: 90%;
        margin-top: 20px;
    }

    .selector {
        width: 100%;
        margin: 10px 0;

    }

    .player,
    .computer {
        width: 100%;
        float: none;

    }

    #messages {
        display: none;
    }


}

